# picoexamples

./: copypico.sh  flash.sh
001-include/: CMakeLists.txt  main.c  poorman.cpp  poorman.h
002-blink/: CMakeLists.txt  blink.c  blink.h
003-pioblink/: CMakeLists.txt  blink.pio  main.c  main.h
004-fft/: CMakeLists.txt  main.c  main.h
005-pwm/: CMakeLists.txt  main.c  main.h
006-frequencycounter/: CMakeLists.txt  main.c  main.h
007-clocks/: CLOCKS.txt  CMakeLists.txt  main.c  main.h
008-helloworld/: main.c  main.h
009-pwmfromclock/: main.c  main.h
010-measurefreq/: main.c  main.h
011-measureduty/: main.c  main.h
012-countedges/: CMakeLists.txt  main.c  main.h
013-readfromserial/: main.c  main.h
014-powermanbutton/: CMakeLists.txt  flash.sh  main.c  main.h
015-hellopio/: hello.pio  hello.pio.h  main.c  main.h
016-hellopio/: hello.pio  hello.pio.h  main.c
017-hellopio/: hello.pio  hello.pio.h  main.c
018-hellopio/: CMakeLists.txt  hello.pio  hello.pio.h  main.c
019-freqcounterDRAFT/: freqcounter.c  freqcounter.pio
020-pwm/: main.c
021-pwm/: main.c
022-pwm/: CMakeLists.txt  main.c  main.h
023-hellopio/: CMakeLists.txt  hello.pio  hello.pio.h  main.c
024-countedgespio/: CMakeLists.txt  hello.pio  hello.pio.h  main.c  main.h
025-47L16/: 47L16.c  47L16.h  CMakeLists.txt  main.h
026-countedges/: hello.pio  hello.pio.h  main.c
027-countedges/: hello.pio  hello.pio.h  main.c  main.h
028-reciprocalcounter/: hello.pio  hello.pio.h  main.c
029-reciprocalcounter/: hello.pio  hello.pio.h
030-irqtest/: hello.pio  hello.pio.h  main.c  main.h
031-reciprocalcounter/: CMakeLists.txt  hello.pio  main.c
032-gpsmeasuresmclock/: CMakeLists.txt  hello.pio  hello.pio.h  main.c
033-47L16/: CMakeLists.txt  eeram_47L16.cpp  eeram_47L16.hpp  main.c  main.h
034-pwmpio/: hello.pio  hello.pio.h  main.c
036-47L16/eeram/: CMakeLists.txt  eeram.cpp  eeram.hpp
036-47L16/writeexample/: CMakeLists.txt
